WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205602
[LFC][IFC] Fix LayoutTests/fast/backgrounds/size/backgroundSize15.html
https://bugs.webkit.org/show_bug.cgi?id=205602
Summary
[LFC][IFC] Fix LayoutTests/fast/backgrounds/size/backgroundSize15.html
alan
Reported
2019-12-26 21:37:45 PST
ssia
Attachments
Patch
(2.31 KB, patch)
2019-12-26 21:43 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-26 21:38:09 PST
<
rdar://problem/58212499
>
alan
Comment 2
2019-12-26 21:43:00 PST
Created
attachment 386431
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-27 06:13:32 PST
Comment on
attachment 386431
[details]
Patch Clearing flags on attachment: 386431 Committed
r253920
: <
https://trac.webkit.org/changeset/253920
>
WebKit Commit Bot
Comment 4
2019-12-27 06:13:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug