[LFC][IFC] Fix LayoutTests/fast/backgrounds/size/backgroundSize15.html https://bugs.webkit.org/show_bug.cgi?id=205602 <rdar://problem/58212499>

Reviewed by Antti Koivisto.

softWrapOpportunityIndex could point after the last inline item in the list (when there's no more wrap opportunity)
e.g text<br> : the softWrapOpportunityIndex is 2.

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::nextContentForLine):


Canonical link: https://commits.webkit.org/218796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253920 268f45cc-cd09-0410-ab3c-d52691b4dbfc